--- a/horse/bin/srvLive2k.ini
+++ b/horse/bin/srvLive2k.ini
@@ -1,9 +1,9 @@
 [CONFIG]
 Driver=Firebird
-Database=C:\Databases\Firebird\DB.FDB
+Database=DIRETORIO_DO_BANCO
 User_Name=sysdba
 Password=masterkey
-Server=54.225.21.228
+Server=IP_DO_SERVER_FIREBIRD
 VendorLib=c:\fbclient.dll
 Protocol=http
 Port=3050
